--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+  <link rel="stylesheet" href="css/stellarnav.css" type="text/css">
   <link rel="stylesheet" href="css/style.css" type="text/css">
   <link rel="stylesheet" href="css/responsive.css" type="text/css">
   <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
   <link rel="stylesheet" href="css/owl.theme.default.min.css" type="text/css">
   <link rel="stylesheet" href="css/animate.min.css" type="text/css">
-  <link rel="stylesheet" href="css/stellarnav.css" type="text/css">
   <!--favicon-->
   <link rel="icon" type="images/favicon.png" href="images/favicon.png">
 
@@ -28,21 +28,7 @@
 
 <body>
 
-  <!-- Top-Header -->
-  <!-- <div class="topContact">
-    <div class="container">
-      <div class="row">
-        <ul class="contactSec">
-          <li><a href="#"><i class="fa fa-key" aria-hidden="true"></i> Login</a></li>
-          <li>|</li>
-          <li><a href="#"><i class="fa fa-user" aria-hidden="true"></i> Register</a></li>
-          <li>|</li>
-          <li><a href="#"><div class="cart"><i class="fa fa-opencart" aria-hidden="true"></i> <span>2</span></div></a></li>
-        </ul>
-        
-      </div>
-    </div>
-  </div> -->
+  
   <!-- Top Header -->
 
   <section class="top-header">
@@ -76,18 +62,74 @@
 <div class="header">
   <div class="container">
     <div class="row">
-      
+      <div id="catagories" class="catagories page-btn">
+        <a href="#">All Catagories</a>
+      </div>
+      <div class="menu">
+        <ul class="menu-nav">
+            <li>
+                <a href="#">About</a>
+                <ul>
+                    <li><a href="#">Demo</a></li>
+                    <li><a href="#">Demo</a></li>
+                    <li><a href="#">Demo</a></li>
+                    <li><a href="#">Demo</a></li>
+                    <li><a href="#">Demo</a></li>
+                    <li><a href="#">Demos</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="case-studies.html">Terms</a>
+                <ul>
+                  <li><a href="#">Demo</a></li>
+                  <li><a href="#">Demo</a></li>
+                  <li><a href="#">Demo</a></li>
+                  <li><a href="#">Demo</a></li>
+                  <li><a href="#">Demo</a></li>
+                  <li><a href="#">Demos</a></li>
+              </ul>
+            </li>
+            <li>
+                <a href="#">Privacy Policy</a>
+            </li>
+            <li>
+                <a href="#">FAQ</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </div>
     </div>
   </div>
 </div>
 <!-- Header End -->
-<!-- Banner -->
-<div class="banner">
-  <div class="slider-caption">
-    <img src="images/banner_home.jpg" alt="">
+<!-- Banner & Catagory_menu -->
+<section class="banner-sec">
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <div class="catagory-menu">
+        <ul>
+          <li><a href="#"><span><img src="images/fresh_icon.png" alt=""></span> Fresh</a></li>
+          <li><a href="#"><span><img src="images/fresh_icon.png" alt=""></span> </a></li>
+          <li><a href="#"><span><img src="images/fresh_icon.png" alt=""></span> </a></li>
+          <li><a href="#"><span><img src="images/fresh_icon.png" alt=""></span> </a></li>
+          <li><a href="#"><span><img src="images/fresh_icon.png" alt=""></span> </a></li>
+          <li><a href="#"><span><img src="images/fresh_icon.png" alt=""></span> </a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="col-md-9 banner">
+      <div class="slider-caption">
+        <img src="images/banner_home.jpg" alt="">
+      </div>
+    </div>
   </div>
 </div>
-<!-- Banner End -->
+</section>
+
+<!-- Banner & Catagory_menu End -->
 <!-- Products -->
 <section class="product-display">
   <div class="container">
@@ -153,8 +195,8 @@
         </div>
         <div class="wishlist"></div>
         <div class="pro-details text-center">
-          <p>Polo T-shirt</p>
-          <h5><del>₹ 39,990</del> <span>(20%)</span></h5>
+          <p>OnePlus 9R</p>
+          <h5><del>₹ 49,990</del> <span>(10%)</span></h5>
           <h4>₹ 39,990</h4>
         </div>
         </a>
@@ -177,9 +219,9 @@
       </div>
       <div class="wishlist"></div>
       <div class="pro-details text-center">
-        <p>Polo T-shirt</p>
-        <h5><del>₹ 39,990</del> <span>(20%)</span></h5>
-        <h4>₹ 39,990</h4>
+        <p>Sports Shoes</p>
+        <h5><del>₹ 3,990</del> <span>(20%)</span></h5>
+        <h4>₹ 9,990</h4>
       </div>
     </a>
     </div>
@@ -202,9 +244,9 @@
     </div>
     <div class="wishlist"></div>
     <div class="pro-details text-center">
-      <p>Polo T-shirt</p>
+      <p>Apple Watch</p>
       <h5><del>₹ 39,990</del> <span>(20%)</span></h5>
-      <h4>₹ 39,990</h4>
+      <h4>₹ 49,990</h4>
     </div>
   </a>
   </div>
