--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
       <div class="catagory-menu">
         <ul>
           <li><a href="#"><span><img src="images/fresh_icon.png" alt=""></span> Fresh</a></li>
-          <li><a href="#"><span><img src="images/fresh_icon.png" alt=""></span> </a></li>
-          <li><a href="#"><span><img src="images/fresh_icon.png" alt=""></span> </a></li>
-          <li><a href="#"><span><img src="images/fresh_icon.png" alt=""></span> </a></li>
-          <li><a href="#"><span><img src="images/fresh_icon.png" alt=""></span> </a></li>
-          <li><a href="#"><span><img src="images/fresh_icon.png" alt=""></span> </a></li>
+          <li><a href="#"><span><img src="images/fresh_icon.png" alt=""></span> Fresh</a></li>
+          <li><a href="#"><span><img src="images/fresh_icon.png" alt=""></span> Fresh</a></li>
+          <li><a href="#"><span><img src="images/fresh_icon.png" alt=""></span> Fresh</a></li>
+          <li><a href="#"><span><img src="images/fresh_icon.png" alt=""></span> Fresh</a></li>
+          <li><a href="#"><span><img src="images/fresh_icon.png" alt=""></span> Fresh</a></li>
         </ul>
       </div>
     </div>
