--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 <body>
 
   
+  
   <!-- Top Header -->
 
   <section class="top-header">
@@ -49,7 +50,7 @@
           </div>
           <div class="user-login">
             <ul>
-              <li><a href="#"><i class="fa fa-user"></i> Sign In / Sign Up</a></li>
+              <li class="signin"><a href="login-page.html"><i class="fa fa-user"></i> Sign In / Sign Up</a></li>
             </ul>
           </div>
         </div>
@@ -68,35 +69,24 @@
       <div class="menu">
         <ul class="menu-nav">
             <li>
-                <a href="#">About</a>
-                <ul>
-                    <li><a href="#">Demo</a></li>
-                    <li><a href="#">Demo</a></li>
-                    <li><a href="#">Demo</a></li>
-                    <li><a href="#">Demo</a></li>
-                    <li><a href="#">Demo</a></li>
-                    <li><a href="#">Demos</a></li>
-                </ul>
+                <a href="about-us.html">About</a>
             </li>
             <li>
-                <a href="case-studies.html">Terms</a>
+                <a href="condition.html">Terms</a>
                 <ul>
                   <li><a href="#">Demo</a></li>
                   <li><a href="#">Demo</a></li>
                   <li><a href="#">Demo</a></li>
-                  <li><a href="#">Demo</a></li>
-                  <li><a href="#">Demo</a></li>
-                  <li><a href="#">Demos</a></li>
               </ul>
             </li>
             <li>
-                <a href="#">Privacy Policy</a>
+                <a href="policy.html">Privacy Policy</a>
             </li>
             <li>
                 <a href="#">FAQ</a>
             </li>
             <li>
-                <a href="contact.html">Contact</a>
+                <a href="contact-us.html">Contact</a>
             </li>
         </ul>
     </div>
@@ -112,12 +102,98 @@
       <div class="catagory-menu">
         <ul>
           <li><a href="#"><span><img src="images/fresh_icon.png" alt=""></span> Fresh</a></li>
-          <li><a href="#"><span><img src="images/fresh_icon.png" alt=""></span> Fresh</a></li>
-          <li><a href="#"><span><img src="images/fresh_icon.png" alt=""></span> Fresh</a></li>
-          <li><a href="#"><span><img src="images/fresh_icon.png" alt=""></span> Fresh</a></li>
-          <li><a href="#"><span><img src="images/fresh_icon.png" alt=""></span> Fresh</a></li>
-          <li><a href="#"><span><img src="images/fresh_icon.png" alt=""></span> Fresh</a></li>
+          <li><a href="#"><span><img src="images/pantry.png" alt=""></span> Pantry</a></li>
+          <li><a href="#"><span><img src="images/mobiles.png" alt=""></span> Mobiles</a></li>
+          <li><a href="#"><span><img src="images/fashion.png" alt=""></span> Fashion</a></li>
+          <li><a href="#"><span><img src="images/electronics.png" alt=""></span> Electronics</a></li>
+          <li><a href="#"><span><img src="images/applineces.png" alt=""></span> Home Appliances</a></li>
         </ul>
+      </div>
+      <div class="left-side-pro owl-carousel owl-theme">
+
+        <div class="item">
+            <div class="product-descrp">
+              <a href="#">
+              <div class="pro-image">
+                <img src="images/pro1.png" alt="">
+              </div>
+              <div class="wishlist"></div>
+              <div class="pro-details text-center">
+                <p>Women's Sports 
+                  Shoe</p>
+                <h5><del>₹ 39,990</del> <span>(20%)</span></h5>
+                <h4>₹ 39,990</h4>
+              </div>
+            </a>
+            </div>
+        </div>
+        <div class="item">
+          <div class="product-descrp">
+            <a href="#">
+            <div class="pro-image">
+              <img src="images/nike-shoe-png.png" alt="">
+            </div>
+            <div class="wishlist"></div>
+            <div class="pro-details text-center">
+              <p>Nike Sports Shoe</p>
+              <h5><del>₹9,990</del> <span>(20%)</span></h5>
+              <h4>₹ 4,990</h4>
+            </div>
+          </a>
+          </div>
+      </div>
+  
+      <div class="item">
+        <div class="product-descrp">
+          <a href="#">
+          <div class="pro-image">
+            <img src="images/OnePlus-9R-Featured-1-2.png" alt="">
+          </div>
+          <div class="wishlist"></div>
+          <div class="pro-details text-center">
+            <p>OnePlus 9R</p>
+            <h5><del>₹ 49,990</del> <span>(10%)</span></h5>
+            <h4>₹ 39,990</h4>
+          </div>
+          </a>
+        </div>
+        </div>
+      
+    <div class="item">
+      <div class="product-descrp">
+        <a href="#">
+        <div class="pro-image">
+          <img src="images/products2.png" alt="">
+        </div>
+        <div class="wishlist"></div>
+        <div class="pro-details text-center">
+          <p>Sports Shoes</p>
+          <h5><del>₹ 3,990</del> <span>(20%)</span></h5>
+          <h4>₹ 9,990</h4>
+        </div>
+      </a>
+      </div>
+  </div>
+  
+  
+  <div class="item">
+    <div class="product-descrp">
+      <a href="#">
+      <div class="pro-image">
+        <img src="images/8985943736350.png" alt="">
+      </div>
+      <div class="wishlist"></div>
+      <div class="pro-details text-center">
+        <p>Apple Watch</p>
+        <h5><del>₹ 39,990</del> <span>(20%)</span></h5>
+        <h4>₹ 49,990</h4>
+      </div>
+    </a>
+    </div>
+  </div>
+  
+        
+  
       </div>
     </div>
     <div class="col-md-9 banner">
