--- a/contact-us.html
+++ b/contact-us.html
@@ -23,7 +23,7 @@
     rel="stylesheet">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 
 <body class="inner-body">
@@ -125,37 +125,67 @@
   <!-- Contact End -->
   
 
-  <!-- footer -->
+  <!-- Footer -->
 
-  <footer class="footer">
-    <div class="footermidsec">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 col-sm-12 col-xs-12 footer-logo text-center">
-            <a class="f-logo" href="index.html">
-              <img class="logo1" src="images/logo.png" alt="logo">
-            </a>
-
-          </div>
-          <div class="col-md-12 col-sm-12 col-xs-12 footer-each">
-            <div class="footerContactSec">
-              <p><span><i class="fa fa-phone" aria-hidden="true"></i> Call Us:</span> <a href="tel:0000000000"> 000-000-0000</a>
-              <p><span><i class="fa fa-map-marker" aria-hidden="true"></i> Find Us: </span> Demo, Services Address</p>
-              <!-- <p><span><i class="fa fa-envelope" aria-hidden="true"></i> Mail Us: </span> <a href="mailto:info.companyname@gmail.com">info.companyname@gmail.com</a></p> -->
+  <section class="footer">
+    <div class="container">
+        <figure class="dots text-center mt-5">
+            <img src="image/dots.jpg" alt="">
+        </figure>
+        <section class="main-footer common-space">
+            <div class="row">
+                <div class="col-md-5 each-footer">
+                    <h4>Lorem ipsum dolor sit amet</h4>
+                    <p><a href="#">Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit</a></p>
+                    <p><a href="mailto:mail@goschuhe.de">mail@Loremipsum.COM</a></p>
+                    <p><a href="tel:+0000000000">Lorem ipsum dolor sit amet<br>+0000000000</a></p>
+                    <h4>Öffnungszeiten</h4>
+                    <p>Montag bis Freitag: 10:00-19:00 Uhr <br>Samstag: 10:00-18:00 Uhr</p>
+                </div>
+                <div class="col-md-3 each-footer">
+                    <h4>Lorem ipsum dolor</h4>
+                    <p>Lorem ipsum dolor</p>
+                    <p>Lorem ipsum dolor</p>
+                    <p>Lorem ipsum dolor</p>
+                    <p>Lorem ipsum dolor <a href="#">(click hier)</a></p>
+                </div>
+                <div class="col-md-4 each-footer">
+                    <h4>UNSERE VORTEILE</h4>
+                    <p>Lorem ipsum dolor</p>
+                    <p>Lorem ipsum dolor</p>
+                    <p>Lorem ipsum dolor</p>
+                    <p>Lorem ipsum dolor <a href="#">(click hier)</a></p>
+                </div>
+                <div class="col-md-5 each-footer top-space">
+                    <h4>JOIN OUR NEWSLETTER</h4>
+                    <p>Lorem ipsum dolor sit amet</p>
+                    <form>
+                        <input type="text" placeholder="Your Email id">
+                        <input type="submit" value="Submit">
+                    </form>
+                </div>
+                <div class="col-md-3 each-footer top-space">
+                    <h4>JOIN US ON</h4>
+                    <ul>
+                        <li><a href="#"><i class="fa fa-facebook-f"></i></a></li>
+                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                    </ul>
+                </div>
+                <div class="col-md-4 each-footer top-space">
+                    <h4>Lorem ipsum dolor</h4>
+                    <ul>
+                        <li><a href="#"><img src="images/mastercard.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="images/mastercard.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="images/mastercard.jpg" alt=""></a></li>
+                    </ul>
+                    <p class="copy-right">© MEGHBELAMART</p>
+                </div>
             </div>
-          </div>
-        </div>
-      </div>
+        </section>
     </div>
-    <div class="footerButtomSec">
-      <div class="container">
-        <ul class="termSec">
-          <li>Copyright © 2021, All Rights Reserved Powered By Meghbela Mart</li>
-        </ul>
-      </div>
-    </div>
-  </footer>
-  <!-- Footer End -->
+</section>
+
+<!-- Footer End -->
 
   <!--scroll-to-top-->
   <div class="back-top"><a href="#0" class="cd-top cd-is-visible cd-fade-out">Top</a></div>
