--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
   <link rel="stylesheet" href="css/owl.theme.default.min.css" type="text/css">
   <link rel="stylesheet" href="css/animate.min.css" type="text/css">
+  <link rel="stylesheet" href="css/lightbox.css" type="text/css">
+  <link rel="stylesheet" href="css/jquery.jqZoom.css" type="text/css"/>
   <!--favicon-->
   <link rel="icon" type="images/favicon.png" href="images/favicon.png">
 
@@ -23,6 +25,7 @@
     rel="stylesheet">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
 </head>
 
@@ -46,7 +49,7 @@
         </div>
         <div class="col-md-4 top-right">
           <div class="page-btn green">
-            <a href="#"><i class="fa fa-shopping-cart"></i> Cart(1)</a>
+            <a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart(1)</a>
           </div>
           <div class="user-login">
             <ul>
@@ -677,6 +680,15 @@
   <script src="js/owl.carousel.min.js" type="text/javascript"></script>
   <script src="js/lightbox.js" type="text/javascript"></script>
   <script src="js/jquery.matchHeight-min.js"></script>
+  <script src="js/jquery.zoom.min.js"></script>
+  <script>
+		$(document).ready(function(){
+			//$('#ex1').zoom();
+			//$('#ex2').zoom({ on:'grab' });
+			$('#ex3').zoom({ on:'click' });			 
+			//$('#ex4').zoom({ on:'toggle' });
+		});
+	</script>
   <script>
     jQuery('.coleql_height').matchHeight();
   </script>
@@ -684,7 +696,8 @@
   <script>
     new WOW().init();
   </script>
-
+  
+  
 </body>
 
 </html>
