--- a/about-us.html
+++ b/about-us.html
@@ -82,7 +82,7 @@
               <a href="policy.html">Privacy Policy</a>
           </li>
           <li>
-              <a href="#">FAQ</a>
+              <a href="faqs.html">FAQ</a>
           </li>
           <li>
               <a href="contact-us.html">Contact</a>
