--- a/condition.html
+++ b/condition.html
@@ -66,10 +66,10 @@
     </div>
     <div class="menu">
       <ul class="menu-nav">
-          <li class="active">
+          <li>
               <a href="about-us.html">About</a>
           </li>
-          <li>
+          <li class="active">
               <a href="condition.html">Terms</a>
               <ul>
                 <li><a href="#">Demo</a></li>
@@ -81,7 +81,7 @@
               <a href="policy.html">Privacy Policy</a>
           </li>
           <li>
-              <a href="#">FAQ</a>
+              <a href="faqs.html">FAQ</a>
           </li>
           <li>
               <a href="contact-us.html">Contact</a>
@@ -210,7 +210,6 @@
 </div>
 </div>
 </section>
-<!-- Banner & Catagory_menu End-->
 
   <!-- About -->
   <section class="whoSection">
@@ -246,9 +245,9 @@
   
   
 
-  <!-- Footer -->
+   <!-- Footer -->
 
-  <section class="footer">
+   <section class="footer">
     <div class="container">
         <figure class="dots text-center mt-5">
             <img src="image/dots.jpg" alt="">
@@ -322,6 +321,15 @@
   <script src="js/owl.carousel.min.js" type="text/javascript"></script>
   <script src="js/lightbox.js" type="text/javascript"></script>
   <script src="js/jquery.matchHeight-min.js"></script>
+  <script src="js/jquery.zoom.min.js"></script>
+  <script>
+		$(document).ready(function(){
+			//$('#ex1').zoom();
+			//$('#ex2').zoom({ on:'grab' });
+			$('#ex3').zoom({ on:'click' });			 
+			//$('#ex4').zoom({ on:'toggle' });
+		});
+	</script>
   <script>
     jQuery('.coleql_height').matchHeight();
   </script>
