--- a/faqs.html
+++ b/faqs.html
@@ -1,100 +1,100 @@
 <!doctype html>
 <html lang="en">
 
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>About us Page </title>
-  
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
-    <link rel="stylesheet" href="css/responsive.css" type="text/css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css" type="text/css">
-    <link rel="stylesheet" href="css/animate.min.css" type="text/css">
-  
-  
-    <!--favicon-->
-    <link rel="icon" type="images/favicon.png" href="images/favicon.png">
-  
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800&family=Oswald:wght@400;500;600;700&display=swap"
-      rel="stylesheet">
-  
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  
-  </head>
-  
-  <body class="inner-body">
-  
-   <!-- Top Header -->
-  
-   <section class="top-header">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-2 top-left">
-          <a href="index.html"><img src="images/logo.png" alt=""></a>
-        </div>
-        <div class="col-md-6 top-mid">
-          <form action="#">
-            <input type="text" placeholder="Search Products & Brands">
-            <input type="submit" value="Search">
-          </form>
-        </div>
-        <div class="col-md-4 top-right">
-          <div class="page-btn green">
-            <a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart(1)</a>
-          </div>
-          <div class="user-login">
-            <ul>
-              <li class="signin"><a href="login-page.html"><i class="fa fa-user"></i> Sign In / Sign Up</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- End -->
-  <!-- Top-Header End -->
-  <!-- Header -->
-  <div class="header">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>About us Page </title>
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+  <link rel="stylesheet" href="css/style.css" type="text/css">
+  <link rel="stylesheet" href="css/responsive.css" type="text/css">
+  <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
+  <link rel="stylesheet" href="css/owl.theme.default.min.css" type="text/css">
+  <link rel="stylesheet" href="css/animate.min.css" type="text/css">
+
+
+  <!--favicon-->
+  <link rel="icon" type="images/favicon.png" href="images/favicon.png">
+
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800&family=Oswald:wght@400;500;600;700&display=swap"
+    rel="stylesheet">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+</head>
+
+<body class="inner-body">
+
+ <!-- Top Header -->
+
+ <section class="top-header">
   <div class="container">
     <div class="row">
-      <div id="catagories" class="catagories page-btn">
-        <a href="#">All Catagories</a>
+      <div class="col-md-2 top-left">
+        <a href="index.html"><img src="images/logo.png" alt=""></a>
       </div>
-      <div class="menu">
-        <ul class="menu-nav">
-            <li>
-                <a href="about-us.html">About</a>
-            </li>
-            <li>
-                <a href="condition.html">Terms</a>
-                <ul>
-                  <li><a href="#">Demo</a></li>
-                  <li><a href="#">Demo</a></li>
-                  <li><a href="#">Demo</a></li>
-              </ul>
-            </li>
-            <li>
-                <a href="policy.html">Privacy Policy</a>
-            </li>
-            <li>
-                <a href="faqs.html">FAQ</a>
-            </li>
-            <li class="active">
-                <a href="contact-us.html">Contact</a>
-            </li>
-        </ul>
-    </div>
+      <div class="col-md-6 top-mid">
+        <form action="#">
+          <input type="text" placeholder="Search Products & Brands">
+          <input type="submit" value="Search">
+        </form>
+      </div>
+      <div class="col-md-4 top-right">
+        <div class="page-btn green">
+          <a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart(1)</a>
+        </div>
+        <div class="user-login">
+          <ul>
+            <li class="signin"><a href="login-page.html"><i class="fa fa-user"></i> Sign In / Sign Up</a></li>
+          </ul>
+        </div>
+      </div>
     </div>
   </div>
+</section>
+<!-- End -->
+<!-- Top-Header End -->
+<!-- Header -->
+<div class="header">
+<div class="container">
+  <div class="row">
+    <div id="catagories" class="catagories page-btn">
+      <a href="#">All Catagories</a>
+    </div>
+    <div class="menu">
+      <ul class="menu-nav">
+          <li>
+              <a href="about-us.html">About</a>
+          </li>
+          <li>
+              <a href="condition.html">Terms</a>
+              <ul>
+                <li><a href="#">Demo</a></li>
+                <li><a href="#">Demo</a></li>
+                <li><a href="#">Demo</a></li>
+            </ul>
+          </li>
+          <li>
+              <a href="policy.html">Privacy Policy</a>
+          </li>
+          <li class="active">
+              <a href="faqs.html">FAQ</a>
+          </li>
+          <li>
+              <a href="contact-us.html">Contact</a>
+          </li>
+      </ul>
   </div>
-  <!-- Header End -->
-  <!-- Banner & Catagory_menu -->
-  <section class="banner-sec">
+  </div>
+</div>
+</div>
+<!-- Header End -->
+<!-- Banner & Catagory_menu -->
+<section class="banner-sec">
   <div class="container">
   <div class="row">
     <div class="col-md-3">
@@ -212,30 +212,79 @@
   </div>
   </section>
 <!-- Banner End -->
-
-  <!-- Contact -->
-  <section class="whoSection contact-us">
-    <div class="container">
+  <!-- FAQ -->
+  <section class="faqs-box">
+    <div class="container py-3">
       <div class="row">
-        <div class="col-md-7 col-sm-7 col-xs-12">
-          <div class="abt-img coleql_height">
-            <img src="images/who-we-are-sec-bg2.jpg" alt="">
+          <div class="col-10 mx-auto">
+              <div class="accordion" id="faqExample">
+                  <div class="card">
+                      <div class="card-header p-2 mb-2" id="headingOne">
+                          <h5 class="mb-0">
+                              <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                Q: How does this work?
+                              </button>
+                            </h5>
+                      </div>
+  
+                      <div id="collapseOne" class="collapse show faq-body" aria-labelledby="headingOne" data-parent="#faqExample">
+                          <div class="card-body">
+                              <b>Answer:</b> It works using the Bootstrap 4 collapse component with cards to make a vertical accordion that expands and collapses as questions are toggled.
+                          </div>
+                      </div>
+                  </div>
+                  <div class="card">
+                      <div class="card-header p-2 mb-2" id="headingTwo">
+                          <h5 class="mb-0">
+                          <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            Q: What is Bootstrap 4?
+                          </button>
+                        </h5>
+                      </div>
+                      <div id="collapseTwo" class="collapse faq-body" aria-labelledby="headingTwo" data-parent="#faqExample">
+                          <div class="card-body">
+                              Bootstrap is the most popular CSS framework in the world. The latest version released in 2018 is Bootstrap 4. Bootstrap can be used to quickly build responsive websites.
+                          </div>
+                      </div>
+                  </div>
+                  <div class="card">
+                      <div class="card-header p-2 mb-2" id="headingThree">
+                          <h5 class="mb-0">
+                              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                Q. What is another question?
+                              </button>
+                            </h5>
+                      </div>
+                      <div id="collapseThree" class="collapse faq-body" aria-labelledby="headingThree" data-parent="#faqExample">
+                          <div class="card-body">
+                              The answer to the question can go here.
+                          </div>
+                      </div>
+                  </div>
+                  <div class="card">
+                      <div class="card-header p-2 mb-2" id="headingThree">
+                          <h5 class="mb-0">
+                              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                Q. What is the next question?
+                              </button>
+                            </h5>
+                      </div>
+                      <div id="collapseThree" class="collapse faq-body" aria-labelledby="headingThree" data-parent="#faqExample">
+                          <div class="card-body">
+                              The answer to this question can go here. This FAQ example can contain all the Q/A that is needed.
+                          </div>
+                      </div>
+                  </div>
+              </div>
+  
           </div>
-        </div>
-        <div class="col-md-5 col-sm-5 col-xs-12">
-          <form action="" class="appointment-form coleql_height">
-            <h3>Ready To Appointment</h3>
-            <input type="text" placeholder="Your Name">
-            <input type="email" placeholder="Your Email">
-            <input type="text" placeholder="Your Phone No">
-            <textarea name="" id="" cols="30" rows="4" placeholder="Your Message"></textarea>
-            <input type="submit" value="Send Now">
-          </form>
-        </div>
       </div>
-    </div>
+      <!--/row-->
+  </div>
+  <!--container-->
   </section>
-  <!-- Contact End -->
+  <!-- FAQ End -->
+  
   
 
   <!-- Footer -->
